<resources>
    <string name="app_name">OIC</string>

    <!--
    <string name="default_web_client_id" translatable="false">924806410873-h6p3e9gm2a6neo7kcqgtam73dl88pkdu.apps.googleusercontent.com</string>
-->

    <!-- 카카오톡 -->
    <string name="kakao_app_key">asdfasdf</string>

    <!-- 로그인-->
    <string name="title_login">로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="action_login">로그인</string>
    <string name="join_in">OIC 가 처음이신가요?</string>
    <string name="join_in_talk">카카오톡으로 로그인</string>
    <string name="join_in_google">구글 계정으로 로그인</string>

    <!-- 회원가입 -->
    <string name="title_join">회원가입</string>
    <string name="greet_text">반갑습니다!</string>
    <string name="email_join">이메일 주소를 입력해주세요</string>
    <string name="password_join">비밀번호를 입력해주세요</string>
    <string name="action_joinin">회원가입 하기</string>

    <!-- 앱바 네비게이션 -->
    <string name="title_search">검색</string>
    <string name="title_note">단어장</string>
    <string name="title_account">내계정</string>
    <string name="toolbar_order">정렬</string>

    <!-- note fragment -->
    <string name="note_switch">뜻 보기</string>

    <!-- account fragment-->
    <string name="account_logout">로그아웃</string>
    <string name="account_withdraw">회원 탈퇴</string>

    <!-- dialog fragment -->
    <string name="logout_massage">로그아웃 하시겠습니까</string>
    <string name="logout_ok">로그아웃</string>
    <string name="withdraw_massage">정말 회원탈퇴 하시겠습니까</string>
    <string name="withdraw_ok">회원탈퇴</string>
    <string name="cancel">돌아가기</string>

</resources>