<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@color/app_background">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/darkblue"
        android:elevation="4dp"
        android:paddingStart="24dp"
        android:theme="@style/Toolbar"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/back_icon"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_title"
            android:text="@string/action_login"
            android:textColor="@color/lightblue"
            android:fontFamily="@font/kotra"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>
    <!--
    <TextView
        android:id="@+id/app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/app_name"
        android:textColor="@color/darkblue"
        android:textSize="80sp"
        android:fontFamily="@font/kotra"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
        -->
    <ImageView
        android:id="@+id/app_title"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:src="@drawable/logo_oic"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_radius_8"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:fontFamily="@font/kotra"
        android:hint="이메일 입력"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_radius_8"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:fontFamily="@font/kotra"
        android:hint="비밀번호 입력"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_radius_8"
        android:backgroundTint="@color/darkblue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="로그인"
        android:fontFamily="@font/kotra"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/join_in"
        android:fontFamily="@font/kotra"
        android:padding="4dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/joinin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="회원가입"
        android:textColor="@color/darkblue"
        android:fontFamily="@font/kotra"
        android:padding="4dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <!--
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/gmail_icon_24"
        app:layout_constraintBottom_toBottomOf="@+id/login_google"
        app:layout_constraintStart_toStartOf="@+id/login_google"
        app:layout_constraintTop_toTopOf="@+id/login_google" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/talk_icon_24"
        app:layout_constraintBottom_toBottomOf="@+id/login_talk"
        app:layout_constraintStart_toStartOf="@+id/login_talk"
        app:layout_constraintTop_toTopOf="@+id/login_talk" />
    -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_talk"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="36dp"
        android:text="@string/join_in_talk"
        android:fontFamily="@font/kotra"
        android:textSize="16sp"
        android:outlineProvider="none"
        android:background="@drawable/shape_radius_24"
        android:backgroundTint="@color/lightblue"
        app:layout_constraintTop_toBottomOf="@+id/joinin"
        tools:layout_editor_absoluteX="36dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_google"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="36dp"
        android:text="@string/join_in_google"
        android:fontFamily="@font/kotra"
        android:textSize="16sp"
        android:outlineProvider="none"
        android:backgroundTint="@color/lightblue"
        android:background="@drawable/shape_radius_24"
        app:layout_constraintTop_toBottomOf="@+id/login_talk"
        tools:layout_editor_absoluteX="36dp" />

    <!-- 회원가입 페이지 -->

    <TextView
        android:id="@+id/greet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="36dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:fontFamily="@font/kotra"
        android:gravity="center"
        android:text="@string/greet_text"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:textColor="@color/darkblue"
        app:layout_constraintBottom_toTopOf="@+id/username_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/username_join"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_radius_8"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:hint="@string/email_join"
        android:fontFamily="@font/kotra"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greet"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/password_join"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_radius_8"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:hint="@string/password_join"
        android:fontFamily="@font/kotra"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_join"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/password_join_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_radius_8"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:hint="비밀번호를 재입력해주세요"
        android:fontFamily="@font/kotra"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_join"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/action_join_in"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_radius_8"
        android:backgroundTint="@color/darkblue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/action_joinin"
        android:fontFamily="@font/kotra"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_join"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>